# app-generator-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
app_generator/: __init__.py  generator.py  main.py
app_generator/commands/: create.py
app_generator/templates/ai/: .gitignore  README.md
app_generator/templates/ai/app/chains/: __init__.py  rag.py
app_generator/templates/ai/app/tools/: __init__.py  registry.py
app_generator/templates/ai/tests/: conftest.py
app_generator/templates/fastapi/: .env.example
app_generator/templates/fastapi-with-frontend/: .gitignore  docker-compose.yml
app_generator/templates/fastapi-with-frontend/app/: __init__.py
app_generator/templates/fastapi-with-frontend/app/api/v1/: health.py
app_generator/templates/fastapi-with-frontend/app/models/: __init__.py
app_generator/templates/fastapi-with-frontend/app/templates/: index.html
app_generator/templates/fastapi-with-frontend/app/templates/partials/: header.html
app_generator/templates/fastapi-with-frontend/tests/: test_frontend.py
app_generator/templates/fastapi/app/db/: session.py
app_generator/templates/fastapi/app/models/: base.py
pyforge/: __init__.py  main.py
pyforge/commands/: create.py
pyforge/templates/ai/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
pyforge/templates/ai/app/: __init__.py  config.py
pyforge/templates/ai/app/agents/: assistant.py
pyforge/templates/ai/app/tools/: search.py
pyforge/templates/ai/tests/: test_agent.py
pyforge/templates/fastapi/: README.md  pyproject.toml
pyforge/templates/fastapi-with-frontend/: Dockerfile  README.md  pyproject.toml
pyforge/templates/fastapi-with-frontend/app/: dependencies.py  main.py
pyforge/templates/fastapi-with-frontend/app/templates/: base.html
pyforge/templates/fastapi-with-frontend/app/templates/partials/: footer.html
pyforge/templates/fastapi/app/: config.py  main.py
pyforge/templates/fastapi/tests/: conftest.py  test_health.py
tests/: __init__.py  test_generator.py
