[project]
name = "app-generator-cli"
version = "1.0.3"
description = "A developer-friendly scaffolding CLI for FastAPI and LangChain/LangGraph projects"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Rajendra Kumar Yadav", email = "yadavrajendrakumar@outlook.com" }]
requires-python = ">=3.10"
keywords = ["cli", "scaffolding", "fastapi", "langchain", "langgraph", "uv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
app-generator-cli = "app_generator.main:app"
app_generator = "app_generator.main:app"

[project.urls]
Homepage = "https://github.com/rajendrakumaryadav/app-generator-cli"
Repository = "https://github.com/rajendrakumaryadav/app-generator-cli"
Issues = "https://github.com/rajendrakumaryadav/app-generator-cli/issues"

[tool.uv.build-backend]
module-name = "app_generator"
module-root = ""
source-include = ["app_generator/**", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["app_generator/templates"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
exclude = "^app_generator/templates/"

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
