[project]
name = "{{ project_name }}"
version = "0.1.0"
description = "A FastAPI backend project with a simple Jinja2 frontend"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
